[gd_scene load_steps=20 format=2]

[ext_resource path="res://SirenaTheme.tres" type="Theme" id=1]
[ext_resource path="res://Screens/AboutScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Screens/MainMenuBottom.tscn" type="PackedScene" id=3]
[ext_resource path="res://Screens/BookingScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://Screens/DetailsScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/SirenaApp.gd" type="Script" id=6]
[ext_resource path="res://Animations/about_slide_in.tres" type="Animation" id=7]
[ext_resource path="res://Animations/main_menu_slide_in.tres" type="Animation" id=8]
[ext_resource path="res://Screens/DestinationsScreen.tscn" type="PackedScene" id=9]
[ext_resource path="res://Screens/TransportScreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://Screens/ConfirmationScreen.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sprites/splashlogo.svg" type="Texture" id=12]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AboutScreen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 360, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenuBottom:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 750 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DestinationsScreen:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 360, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TransportScreen:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 360, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DetailsScreen:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 360, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BookingScreen:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 360, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ConfirmScreen:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 360, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "booking_slide_in"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("BookingScreen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.26 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Vector2( 360, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "confirm_slide_in"
tracks/0/type = "value"
tracks/0/path = NodePath("ConfirmScreen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.26 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Vector2( 360, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "destinations_slide_in"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("DestinationsScreen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.26 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Vector2( 360, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "details_slide_in"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("DetailsScreen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.26 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Vector2( 360, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "main_menu_slide_out"
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenuBottom:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.26 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 696 ), Vector2( 0, 750 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "transport_slide_in"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("TransportScreen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.26 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Vector2( 360, 0 ), Vector2( 0, 0 ) ]
}

[node name="SirenaApp" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.3, 1.3 )
theme = ExtResource( 1 )
script = ExtResource( 6 )

[node name="Splash" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -107.0
margin_bottom = -220.0

[node name="TextureRect" type="TextureRect" parent="Splash"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.038
margin_top = -97.1538
margin_right = 255.962
margin_bottom = 170.846
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
playback_speed = 2.0
method_call_mode = 1
anims/RESET = SubResource( 1 )
anims/about_slide_in = ExtResource( 7 )
anims/booking_slide_in = SubResource( 6 )
anims/confirm_slide_in = SubResource( 7 )
anims/destinations_slide_in = SubResource( 2 )
anims/details_slide_in = SubResource( 4 )
anims/main_menu_slide_in = ExtResource( 8 )
anims/main_menu_slide_out = SubResource( 5 )
anims/transport_slide_in = SubResource( 3 )

[node name="AboutScreen" parent="." instance=ExtResource( 2 )]
margin_left = 360.0
margin_right = 720.0

[node name="DestinationsScreen" parent="." instance=ExtResource( 9 )]
margin_left = 360.0
margin_right = 720.0

[node name="TransportScreen" parent="." instance=ExtResource( 10 )]
margin_left = 360.0
margin_right = 720.0

[node name="MainMenuBottom" parent="." instance=ExtResource( 3 )]
margin_top = 750.0
margin_bottom = 926.0

[node name="DetailsScreen" parent="." instance=ExtResource( 5 )]
margin_left = 360.0
margin_right = 720.0

[node name="BookingScreen" parent="." instance=ExtResource( 4 )]

[node name="ConfirmScreen" parent="." instance=ExtResource( 11 )]
margin_left = 360.0
margin_right = 252.0

[connection signal="pressed" from="MainMenuBottom/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="MainMenuBottom/Destinations" to="." method="_on_Destinations_pressed"]
[connection signal="pressed" from="MainMenuBottom/Transport" to="." method="_on_Transport_pressed"]

[editable path="MainMenuBottom"]
